fix api delete pro-mem, add api get task for manager/pm vs for user
