# hrm_nextbean_api/services/TaskServices/controller/create_task_handler.go
@@ -31,7 +31,7 @@ const (
 // @Param			request		body		model.TaskCreation		true	"task creation request"
 // @Success		200			{object}	utils.success_response	"Successful create"
 // @Failure		400			{object}	utils.error_response	"create failure"
-// @Router			/tasks/{project-id} [post]
+// @Router			/projects/{project-id}/tasks [post]
 // @Security		ApiKeyAuth
 func handleCreateTask(db *sql.DB) func(rw http.ResponseWriter, req *http.Request) {
 	return func(rw http.ResponseWriter, req *http.Request) {
