# hrm_nextbean_api/services/TaskServices/model/model_task.go
@@ -1,8 +1,15 @@
 package model
 
 type Task struct {
-	Id         string `json:"id"`
-	ProjectId  string `json:"project-id"`
-	AssignedTo string `json:"assigned-to"`
-	
+	Id              string `json:"id"`
+	ProjectId       string `json:"project-id"`
+	AssignedTo      string `json:"assigned-to"`
+	AssignedName    string `json:"assigned-name"`
+	AssignedCode    string `json:"assigned-code"`
+	IsApproved      string `json:"is-approved"`
+	Status          string `json:"status"`
+	Name            string `json:"name"`
+	Description     string `json:"description"`
+	EstimatedEffort string `json:"estimated-effort"`
+	ActualEffort    string `json:"Actual-effort"`
 }
